--- a/styles/pad.css
+++ b/styles/pad.css
@@ -1,360 +1,434 @@
-@media screen and (min-width: 576px) and (max-width: 767px){
-    .name-link-font{
-      font-family: 'Montserrat', sans-serif;
+@media screen and (min-width: 481px) and (max-width: 768px){
+    * {
+        box-sizing: border-box;
+        padding: 0;
+        margin: 0;
+      }
+      .name-link-font{
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 400 bold !important;
+        color: #212d50 !important;
+        line-height: 40px !important;
+        font-size: 30px !important;
+        letter-spacing: 5px !important;
+        margin-top: 10% !important;
+        margin-left: 27% !important;
+        cursor: pointer !important;
+      }
+    
+      .intro-font{
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 400 bold !important;
+        color: #212d50 !important;
+        font-size: 30px !important;
+        /* line-height: 45px !important; */
+        letter-spacing: 3px !important;
+      
+      }
+      
+      .intro-paragraph-font{
+        font-family: 'Open Sans', sans-serif;
+        font-size: 25px !important;
+        color: #212d50 !important;
+        letter-spacing: 3px !important;
+        line-height: 0px !important;
+      }
+    
+    
+      .new-menu {
+        width: 100% !important;
+         height: 15% !important;
+         background-color: white !important;
+         border-bottom: 0.1em solid lightgray !important;
+         margin: 0 !important;
+         padding: 5px !important;
+    }
+    
+       .menu-nav{
+         height: 100% !important;
+         padding: 5px !important;
+         margin: 0 !important;
+         display: grid !important; 
+         grid-template-columns: repeat(9, 1fr) !important;
+         grid-auto-rows: 50% !important; 
+    
+         }
+       
+       
+       ul{
+         width: 100% !important;
+         
+         color: #212d50 !important;
+       }
+       
+       ul, li {
+         list-style-type: none !important;
+         
+       }
+       
+      
+    
+       .name{
+         height: 100% !important;
+         grid-column: 1/ 10 !important;
+         grid-row: 1 !important;
+    
+       }
+    
+       .projects-link{
+         height: 100% !important;
+         grid-column: 3/ 4 !important;
+       }
+    
+       .about-contact{
+         height: 100% !important;
+         grid-column: 5/ 6 !important;
+       }
+    
+       .contact{
+         height: 100% !important;
+         grid-column: 8/ 10 !important;
+        
+       }
+       
+       .name-text{
+         color: #212d50 !important;
+         margin-left: 31% !important;
+         margin-top: 3% !important;
+         /* margin-bottom: 20%; */
+      }
+    
+       .project-text{
+        margin: 0 0 0 0 !important;
+        
+       }
+       .about-text{
+        margin: 0 0 0 50% !important;
+        
+       }
+       .contact-text{
+        margin: 0 0 0 0 !important;
+        
+       }
+       
+       .projects-font{
+         line-height: 40px;
+         font-size: 18px;
+         font-weight: 400 bold !important;
+         cursor: pointer;
+         letter-spacing: 3px;
+       
+       }
+       .about-font{
+         line-height: 40px;
+         font-size: 18px;
+         font-weight: 400 bold !important;
+         cursor: pointer;
+         letter-spacing: 3px;
+       }
+       .contact-font{
+         line-height: 40px;
+         font-size: 18px;
+         font-weight: 400 bold !important;
+         cursor: pointer;
+         letter-spacing: 3px;
+       }
+    
+       #particles-js {
+        /* background: rgb(37, 40, 52); */
+        /* background: rgb(242, 240, 236); */
+        /* background: #F5F4F1; */
+        background: #F9F8F6;
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
+        margin: 0;
+      
+      }
+      
+      .container{
+        position: absolute;
+        width: 100%;
+        /* margin-top: 25%;
+        margin-left: 25%; */
+      }
+      
+      div.intro{
+        width: 100% !important;
+        height: 30% !important;
+        margin-top: 75% !important;
+        margin-left: 5% !important;
+        position: absolute !important;
+        color: rgb(66, 66, 66) !important;
+        /* font-size: 45px !important; */
+        /* line-height: 45px !important;
+        font-weight: 400 !important;
+        
+        letter-spacing: 0px !important; */
+      }
+    
+      .portfolio{
+        display: grid !important;
+        grid-template-columns: 1fr !important;
+        grid-auto-rows: 50% !important;
+        grid-gap: 1rem !important;
+        /* margin-top: 5%; */
+       width: 90% !important;
+        height: 100% !important;
+        margin-left: 5% !important;
+        margin-right: 5% !important;
+        
+      }
+    
+      
+      .portfolio-heading {
+        display: flex !important;
+        margin-top: 20% !important;
+        flex-direction: column !important;
+        align-items: center !important;
+        grid-column: 1 !important;
+        width: 80%;
+        height: 50%;
+        grid-row: 1 !important;
+    }
+    .portfolio-heading-blurb{
+          /* margin-left: 10% !important; */
+          text-align: justify !important;
+          font-family: 'Open Sans', sans-serif !important;
+          font-size: 14px !important;
+          height: 100%;
+          width: 88%;
+    }
+    .portfolio-heading-text {
+      font-family: 'Montserrat', sans-serif !important;
       font-weight: 400 bold !important;
       color: #212d50 !important;
-      line-height: 45px;
-      font-size: 50px;
-      letter-spacing: 5px;
-      margin-top: 10%;
-      margin-left: 15%;
-      cursor: pointer;
-    }
-  
-    .intro-font{
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 400 ;
-      color: #212d50 !important;
-      font-size: 40px;
-      line-height: 45px;
-      letter-spacing: 3px;
-    
+      font-size: 25px !important;
+      /* line-height: 45px; */
+      letter-spacing: 0px !important;
     }
     
-    .intro-paragraph-font{
+      .box-1 {
+        /* height: 100%; */
+        grid-column: 1 !important;
+        grid-row: 2 !important;
+      }
+    
+      
+    
+      .box-2{
+        grid-column: 1 !important;
+        grid-row: 3 !important;
+      }
+      .box-3{
+        grid-column: 1 !important;
+        grid-row: 4 !important;
+      }
+      .box-4{
+        grid-column: 1 !important;
+        grid-row: 5 !important;
+      }
+      .box-5{
+        grid-column: 1 !important;
+        grid-row: 6 !important;
+      }
+      .box-6{
+        grid-column: 1 !important;
+        grid-row: 7 !important;
+      }
+      
+    
+      .paragraph-container{
+        
+        background: #F9F8F6;
+        margin-top: 250% !important;
+        width: 100% !important;
+        height: 100% !important;
+        display: flex;  
+        
+        align-items: center;
+        
+      }
+      
+      
+      .paragraph{
+        display: grid;
+        grid-template-columns: 1fr !important;
+        grid-auto-rows: 40% !important;
+        grid-gap: 0.1rem !important;
+        margin-top: 15% !important;
+        margin-left: 5% !important;
+        width: 80% !important;
+        height: 100% !important;
+        margin-bottom: 20% !important;
+        /* position: absolute; */
+      
+      }
+      .about-blurb{
+        grid-column: 1 !important;
+        grid-row: 1 !important;
+        width: 80% !important;
+        /* margin-left: 5%; */
+        margin-top: 10%;
+        display: flex;
+        flex-direction: column;
+        
+      }
+      .about-blurb-tittle {
+        margin-bottom: 5% !important;
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 400 bold !important;
+        color: #212d50 !important;
+        font-size: 35px !important;
+        /* line-height: 45px; */
+        letter-spacing: 3px !important;
+    }
+    
+    .about-blurb-text {
+      font-family: 'Open Sans', sans-serif !important;
+      font-size: 14px !important;
+      color: #43454B !important;
+    }
+      
+      
+      .about-picture {
+        background-image: url(../assets/jhedi2_40\ 3.jpg);
+        background-size: contain !important;
+        background-repeat: no-repeat !important;
+        height: 400px !important;
+        width: 400px !important;
+        margin-top: 10% !important;
+        grid-column: 1 !important;
+        grid-row: 2 !important;
+        display: block !important;
+    }
+    
+    
+    
+    
+    
+      
+      
+      .second-about-blurb{
+        display: none !important;
+        grid-column: 1 !important;
+        grid-row: 3 !important;
+        margin-top: 10%;
+        margin-left: 0;
+      }
+      
+      .second-about-img{
+        display: none !important;
+        background-image: url("../assets/IMG_2635.jpg");
+        background-size: cover;
+        grid-column: 1 !important;
+        grid-row: 3 !important;
+        margin-top: 30%;
+      }
+      /* .third-about-img{
+        grid-column: 2 / 3;
+        grid-row: 2/3;
+      
+      } */
+                                                                                      
+      
+      /* .about-picture{
+        background-image: url("../assets/jhedi2_40\ 3.jpg");
+        background-size: cover;
+        height: 100%;
+        width: 100%;
+        margin-right: 10%;
+        grid-column: 6 / 8;
+        grid-row: 1/2;
+      } */
+    
+        .contact-font-last{
+      
+        width: 100% !important;
+        height: 100% !important;
+        margin-top: 30%;
+        
+      } 
+       
+      .contact-container{
+        display: grid !important;
+        grid-template-columns: 1fr !important;
+        grid-auto-rows: 40% !important;
+        grid-gap: 0.1rem !important;
+        /* margin-top: 380% !important; */
+        width: 93% !important;
+        height: 100% !important;
+        margin-left: 5% !important;
+        margin-right: 5% !important;
+      }
+      
+      
+      
+      div#map{
+       height: 400px !important;
+       width: 100% !important;
+       margin-left: 0 !important;
+       /* margin-right: 40% !important; */
+      
+      }
+      
+      
+      .contact-page{ 
+        grid-column: 1 !important;
+        grid-row: 2 !important;
+        margin-top: 10% !important;
+      }
+      
+      #map{
+        grid-column: 1 !important;
+        grid-row: 1 !important;
+        /* height: 150px !important; */
+       
+        /* margin-right: 30% !important; */
+      }
+      
+      .contact-form{
+        grid-column: 3 / 6;
+        grid-row: 3/4;
+      
+      }
+      .contact-page-text {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400 bold !important;
+        color: #212d50 !important;
+        font-size: 35px !important;
+        /* line-height: 45px; */
+        letter-spacing: 3px !;
+        
+    }
+    .contact-page-text-email  {
       font-family: 'Open Sans', sans-serif;
-      font-size: 30px;
-      color: #212d50 !important;
-      letter-spacing: 3px;
+      font-size: 14px !important;
+      color: #43454B;
     }
-  
-  
-    .new-menu {
-      width: 100%;
-       height: 15%;
-       background-color: white;
-       border-bottom: 0.1em solid lightgray;
-       margin: 0;
-       padding: 0;
-  }
-  
-     .menu-nav{
-       height: 100%;
-       padding: 0;
-       margin: 0;
-       display: grid;
-       grid-template-columns: repeat(9, 1fr);
-       grid-auto-rows: 50%;
-  
-       }
-     
-     
-     ul{
-       width: 100%;
-       
-       color: #212d50;
-     }
-     
-     ul, li {
-       list-style-type: none;
-       
-     }
-     
-    
-  
-     .name{
-       height: 100%;
-       grid-column: 1/ 10;
-       grid-row: 1;
-  
-     }
-  
-     .projects-link{
-       height: 100%;
-       grid-column: 3/ 4;
-     }
-  
-     .about-contact{
-       height: 100%;
-       grid-column: 5/ 6;
-     }
-  
-     .contact{
-       height: 100%;
-       grid-column: 7/ 10;
-      
-     }
-     
-     .name-text{
-       color: #212d50;
-       margin-left: 35%;
-       margin-top: 3%;
-    }
-  
-     .project-text{
-      margin: 15% 0 0 0;
-      
-     }
-     .about-text{
-      margin: 15% 0 0 0;
-      
-     }
-     .contact-text{
-      margin: 5% 0 0 0;
-      
-     }
-     
-     .projects-font{
-       line-height: 40px;
-       font-size: 20px;
-       font-weight: 400;
-       cursor: pointer;
-       letter-spacing: 3px;
-     
-     }
-     .about-font{
-       line-height: 40px;
-       font-size: 20px;
-       font-weight: 400;
-       cursor: pointer;
-       letter-spacing: 3px;
-     }
-     .contact-font{
-       line-height: 40px;
-       font-size: 20px;
-       font-weight: 400;
-       cursor: pointer;
-       letter-spacing: 3px;
-     }
-  
-     #particles-js {
-      /* background: rgb(37, 40, 52); */
-      /* background: rgb(242, 240, 236); */
-      /* background: #F5F4F1; */
-      background: #F9F8F6;
-      overflow: hidden;
-      height: 100%;
-      width: 100%;
-      margin: 0;
-    
+    .email{
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px !important;
+      color: #43454B;
     }
     
-    .container{
-      position: absolute;
-      width: 100%;
-      /* margin-top: 25%;
-      margin-left: 25%; */
+      div.footer {
+        display: flex !important;
+        flex-direction: row !important;
+        justify-content: center !important;
+        align-items: center !important;
+        bottom: 0 !important;
+        border-top: 1px solid lightgray !important;
+        margin-top: 25% !important;
+        height: 5% !important; 
+        width: 100% !important;
     }
-    
-    div.intro{
-      width: 100%;
-      height: 40%;
-      margin-top: 80%;
-      margin-left: 5%;
-      position: absolute;
-      color: rgb(66, 66, 66);
-      font-size: 45px;
-      line-height: 45px;
-      font-weight: 400;
-      
-      letter-spacing: 0px;
+    .footer-text {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px !important;
+      color: #43454B !important;
+      padding-top: 5% !important;
     }
-  
-    .portfolio{
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-auto-rows: 40%;
-      /* grid-gap: 3rem; */
-      /* margin-top: 5%; */
-      margin-left: 10%;
-      
-      width: 80%;
-      height: 110%;
-      
-    }
-  
-    
-    .portfolio-heading {
-      display: flex;
-      margin-top: 50%;
-      flex-direction: column;
-      align-items: center;
-      grid-column: 1 ;
-  
-      grid-row: 1 ;
-  }
-  
-    .box-1{
-      /* height: 100%; */
-      grid-column: 1;
-      grid-row: 2 ;
-    }
-  
-    .box-2{
-      grid-column: 1;
-      grid-row: 3;
-    }
-    .box-3{
-      grid-column: 1 ;
-      grid-row: 4;
-    }
-    .box-4{
-      grid-column: 1;
-      grid-row: 5;
-    }
-    .box-5{
-      grid-column: 1 ;
-      grid-row: 6;
-    }
-    .box-6{
-      grid-column: 1;
-      grid-row: 7;
-    }
-    
-  
-    .paragraph-container{
-      /* background: rgb(242, 240, 236); */
-      background: #F9F8F6;
-      margin-top: 300%;
-      width: 100%;
-      height: 150%;
-      /* display: flex;  */
-      
-      /* align-items: center; */
-      
-    }
-    
-    
-    .paragraph{
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-auto-rows: 40%;
-      grid-gap: 1rem;
-      margin-top: 15%;
-      margin-left: 10%;
-      width: 70%;
-      height: 100%;
-      position: absolute;
-    
-    }
-    
-    
-    
-    .about-blurb{
-      grid-column: 1 ;
-      grid-row: 1 ;
-      width: 80%;
-      /* margin-left: 5%; */
-      display: flex;
-      flex-direction: column;
-      
-    }
-    
-    
-    
-    .about-picture{
-      background-image: url("../assets/jhedi2_40\ 3.jpg");
-      background-size: cover;
-      height: 100%;
-      width: 100%;
-      margin-right: 10%;
-      grid-column: 1 !important;
-      grid-row: 2 !important;
-    }
-    
-    .second-about-blurb{
-      grid-column: 1 !important;
-      grid-row: 3 !important;
-      margin-top: 13%;
-      margin-left: 0;
-    }
-    
-    .second-about-img{
-      background-image: url("../assets/IMG_2635.jpg");
-      background-size: cover;
-      grid-column: 1 !important;
-      grid-row: 3 !important;
-      margin-top: 20%;
-    }
-    /* .third-about-img{
-      grid-column: 2 / 3;
-      grid-row: 2/3;
-    
-    } */
-                                                                                    
-    
-    .about-picture{
-      background-image: url("../assets/jhedi2_40\ 3.jpg");
-      background-size: cover;
-      height: 100%;
-      width: 100%;
-      margin-right: 10%;
-      grid-column: 6 / 8;
-      grid-row: 1/2;
-    }
-  
-    .contact-font-last{
-    
-      width: 100%;
-      height: 100%;
-      
-    }
-    
-    .contact-container{
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-auto-rows: 35%;
-      grid-gap: 1rem;
-      margin-top: 10%;
-      margin-left: 10%;
-      width: 90%;
-      height: 90%;
-      position: absolute;
-    
-    }
-    
-    
-    
-    div#map{
-     height: 300px;
-     width: 100%;
-     margin-left: 0;
-     margin-right: 40%;
-    
-    }
-    
-    
-    .contact-page{ 
-      grid-column: 1;
-      grid-row: 2;
-      margin-top: 10%;
-    }
-    
-    #map{
-      grid-column: 1;
-      grid-row: 1;
-      /* height: 150px !important; */
-     
-      /* margin-right: 30% !important; */
-    }
-    
-    .contact-form{
-      grid-column: 3 / 6;
-      grid-row: 3/4;
-    
-    }
-  
-    div.footer {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      /* bottom: 0; */
-      border-top: 1px solid lightgray;
-      margin-top: 7%;
-      height: 10%;
-      width: 100%;
-  }
   
   }
   
