--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -6,34 +6,37 @@
     padding: 0;
     margin: 0;
   }
-  .name-link-font{
+  .name-link-font {
     font-family: 'Montserrat', sans-serif !important;
-    font-weight: 400 bold !important;
+    font-weight: 600 !important;
     color: #212d50 !important;
-    line-height: 40px !important;
-    font-size: 30px !important;
+    /* line-height: 40px !important; */
+    font-size: 50px !important;
     letter-spacing: 5px !important;
-    margin-top: 10% !important;
-    margin-left: 20% !important;
+    /* margin-top: 10% !important; */
+    /* margin-left: 0% !important; */
     cursor: pointer !important;
-  }
+}
 
   .intro-font{
     font-family: 'Montserrat', sans-serif !important;
-    font-weight: 400 !important;
+    font-weight: bold !important;
     color: #212d50 !important;
-    font-size: 20px !important;
+    font-size: 25px !important;
     /* line-height: 45px !important; */
     letter-spacing: 3px !important;
+    margin-top: 0;
   
   }
   
   .intro-paragraph-font{
     font-family: 'Open Sans', sans-serif;
-    font-size: 15px !important;
+    font-size: 20px !important;
+    font-weight: bold;
     color: #212d50 !important;
     letter-spacing: 3px !important;
     line-height: 0px !important;
+    margin-top: 0;
   }
 
 
@@ -44,9 +47,10 @@
      border-bottom: 0.1em solid lightgray !important;
      margin: 0 !important;
      padding: 0 !important;
+     position: absolute;
 }
 
-   .menu-nav{
+   /* .menu-nav{
      height: 100% !important;
      padding: 0 !important;
      margin: 0 !important;
@@ -97,9 +101,9 @@
      color: #212d50 !important;
      margin-left: 31% !important;
      margin-top: 3% !important;
-     /* margin-bottom: 20%; */
-  }
-
+    
+  } */
+/* 
    .project-text{
     margin: 0 0 0 0 !important;
     
@@ -134,7 +138,144 @@
      font-weight: 400;
      cursor: pointer;
      letter-spacing: 3px;
+   } */
+
+
+   .menu-nav{
+     height: 100% !important;
+     padding: 0 !important;
+     margin: 0 !important;
+     display: grid !important; 
+     grid-template-columns: repeat(9, 1fr) !important;
+     grid-auto-rows: 50% !important; 
+
+     }
+   
+   
+   ul{
+     width: 100% !important;
+     
+     color: #212d50 !important;
    }
+   
+   ul, li {
+     list-style-type: none !important;
+    
+     
+   }
+   
+  
+
+   .name{
+     height: 100% !important;
+     grid-column: 1/ 10 !important;
+     grid-row: 1 / 2 !important;
+
+   }
+
+   .mobile-nav {
+    position: absolute;
+    z-index: 3;
+    right: 10%;
+    top: 25%;
+    cursor: pointer;
+    grid-column: 8/ 10 !important;
+    grid-row: 1 !important;
+    
+   }
+
+   .mobile{
+     display: block !important;
+   }
+
+   .projects-link{
+     height: 100% !important;
+     grid-column: 1/ 10 !important;
+     grid-row: 3;
+     border-top: lightgrey solid 1px;
+     border-bottom: lightgrey solid 1px;
+     display: none;
+     
+   }
+
+   .about-contact{
+     height: 100% !important;
+     grid-column: 1 / 10 !important;
+     grid-row: 4;
+     border-bottom: lightgrey solid 1px;
+     display: none;
+   }
+
+   .contact{
+     height: 100% !important;
+     grid-column: 1/ 10 !important;
+     grid-row: 5;
+     border-bottom: lightgrey solid 1px;
+     display: none ;
+    
+   }
+   
+   .name-text{
+    color: #212d50 !important;
+    margin-left: 41% !important;
+    margin-top: 10% !important;
+    width: 20%;
+}
+    
+  }
+
+   .project-text{
+    margin: 2.5% 0 0 5% !important;
+    
+    
+   }
+   .about-text{
+    margin: 2.5% 0 0 5% !important;
+    
+   }
+   .contact-text{
+    margin: 2.5% 0 0 5% !important;
+    
+   }
+   
+   .projects-font{
+     line-height: 40px;
+     font-size: 14px;
+     font-weight: 700;
+     cursor: pointer;
+     letter-spacing: 3px;
+   
+   }
+   .about-font{
+     line-height: 40px;
+     font-size: 14px;
+     font-weight: 700;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+   .contact-font{
+     line-height: 40px;
+     font-size: 14px;
+     font-weight: 700;
+     cursor: pointer;
+     letter-spacing: 3px;
+   }
+
+   ul li {
+     background: white;
+     width: 100% !important;
+     
+   }
+   
+  
+    .btn-line {
+      width: 30px;
+      height: 4px;
+      margin: 0 0 5px 0;
+      background: #212d50 !important;
+      
+    }
+   
 
    #particles-js {
     /* background: rgb(37, 40, 52); */
