--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -8,21 +8,20 @@
   }
   .name-link-font {
     font-family: 'Montserrat', sans-serif !important;
-    font-weight: 600 !important;
+    font-weight: 400 !important;
     color: #212d50 !important;
-    /* line-height: 40px !important; */
-    font-size: 50px !important;
+    
+    font-size: 35px !important;
     letter-spacing: 5px !important;
-    /* margin-top: 10% !important; */
-    /* margin-left: 0% !important; */
+    
     cursor: pointer !important;
 }
 
   .intro-font{
     font-family: 'Montserrat', sans-serif !important;
-    font-weight: bold !important;
+    font-weight: 400 !important;
     color: #212d50 !important;
-    font-size: 25px !important;
+    font-size: 20px !important;
     /* line-height: 45px !important; */
     letter-spacing: 3px !important;
     margin-top: 0;
@@ -31,8 +30,8 @@
   
   .intro-paragraph-font{
     font-family: 'Open Sans', sans-serif;
-    font-size: 20px !important;
-    font-weight: bold;
+    font-size: 15px !important;
+    font-weight: 400;
     color: #212d50 !important;
     letter-spacing: 3px !important;
     line-height: 0px !important;
@@ -50,95 +49,7 @@
      position: absolute;
 }
 
-   /* .menu-nav{
-     height: 100% !important;
-     padding: 0 !important;
-     margin: 0 !important;
-     display: grid !important; 
-     grid-template-columns: repeat(9, 1fr) !important;
-     grid-auto-rows: 50% !important; 
 
-     }
-   
-   
-   ul{
-     width: 100% !important;
-     
-     color: #212d50 !important;
-   }
-   
-   ul, li {
-     list-style-type: none !important;
-     
-   }
-   
-  
-
-   .name{
-     height: 100% !important;
-     grid-column: 1/ 10 !important;
-     grid-row: 1 !important;
-
-   }
-
-   .projects-link{
-     height: 100% !important;
-     grid-column: 2/ 3 !important;
-   }
-
-   .about-contact{
-     height: 100% !important;
-     grid-column: 4/ 5 !important;
-   }
-
-   .contact{
-     height: 100% !important;
-     grid-column: 7/ 9 !important;
-    
-   }
-   
-   .name-text{
-     color: #212d50 !important;
-     margin-left: 31% !important;
-     margin-top: 3% !important;
-    
-  } */
-/* 
-   .project-text{
-    margin: 0 0 0 0 !important;
-    
-   }
-   .about-text{
-    margin: 0 0 0 50% !important;
-    
-   }
-   .contact-text{
-    margin: 0 0 0 0 !important;
-    
-   }
-   
-   .projects-font{
-     line-height: 40px;
-     font-size: 13px;
-     font-weight: 400;
-     cursor: pointer;
-     letter-spacing: 3px;
-   
-   }
-   .about-font{
-     line-height: 40px;
-     font-size: 13px;
-     font-weight: 400;
-     cursor: pointer;
-     letter-spacing: 3px;
-   }
-   .contact-font{
-     line-height: 40px;
-     font-size: 13px;
-     font-weight: 400;
-     cursor: pointer;
-     letter-spacing: 3px;
-   } */
 
 
    .menu-nav{
@@ -176,11 +87,12 @@
    .mobile-nav {
     position: absolute;
     z-index: 3;
-    right: 10%;
-    top: 25%;
+    right: 5%;
+    top: 35%;
     cursor: pointer;
     grid-column: 8/ 10 !important;
     grid-row: 1 !important;
+    display: block !important;
     
    }
 
@@ -218,45 +130,45 @@
    .name-text{
     color: #212d50 !important;
     margin-left: 41% !important;
-    margin-top: 10% !important;
+    margin-top: 8% !important;
     width: 20%;
 }
     
   }
 
    .project-text{
-    margin: 2.5% 0 0 5% !important;
+    margin: 1% 0 0 5% !important;
     
     
    }
    .about-text{
-    margin: 2.5% 0 0 5% !important;
+    margin: 1% 0 0 5% !important;
     
    }
    .contact-text{
-    margin: 2.5% 0 0 5% !important;
+    margin: 1% 0 0 5% !important;
     
    }
    
    .projects-font{
      line-height: 40px;
-     font-size: 14px;
-     font-weight: 700;
+     font-size: 13px;
+     font-weight: 400;
      cursor: pointer;
      letter-spacing: 3px;
    
    }
    .about-font{
      line-height: 40px;
-     font-size: 14px;
-     font-weight: 700;
+     font-size: 12px;
+     font-weight: 400;
      cursor: pointer;
      letter-spacing: 3px;
    }
    .contact-font{
      line-height: 40px;
-     font-size: 14px;
-     font-weight: 700;
+     font-size: 12px;
+     font-weight: 400;
      cursor: pointer;
      letter-spacing: 3px;
    }
@@ -269,8 +181,8 @@
    
   
     .btn-line {
-      width: 30px;
-      height: 4px;
+      width: 25px;
+      height: 1.5px;
       margin: 0 0 5px 0;
       background: #212d50 !important;
       
@@ -299,15 +211,11 @@
   div.intro{
     width: 100% !important;
     height: 30% !important;
-    margin-top: 98% !important;
+    margin-top: 120% !important;
     margin-left: 5% !important;
     position: absolute !important;
     color: rgb(66, 66, 66) !important;
-    /* font-size: 45px !important; */
-    /* line-height: 45px !important;
-    font-weight: 400 !important;
     
-    letter-spacing: 0px !important; */
   }
 
   .portfolio{
@@ -348,7 +256,8 @@
   color: #212d50 !important;
   font-size: 15px !important;
   /* line-height: 45px; */
-  letter-spacing: 0px !important;
+  letter-spacing: 3px !important;
+  margin-bottom: 20px;
 }
 
   .box-1 {
@@ -419,7 +328,7 @@
   .about-blurb-tittle {
     margin-bottom: 5% !important;
     font-family: 'Montserrat', sans-serif !important;
-    font-weight: 400 bold !important;
+    font-weight: 400;
     color: #212d50 !important;
     font-size: 30px !important;
     /* line-height: 45px; */
@@ -439,7 +348,7 @@
     background-repeat: no-repeat !important;
     height: 400px !important;
     width: 400px !important;
-    margin-top: 10% !important;
+    margin-top: 20% !important;
     grid-column: 1 !important;
     grid-row: 2 !important;
     display: block !important;
@@ -488,7 +397,7 @@
   
     width: 100% !important;
     height: 100% !important;
-    margin-top: 50%;
+    margin-top: 70%;
     
   } 
    
@@ -510,6 +419,7 @@
    height: 200px !important;
    width: 100% !important;
    margin-left: 0 !important;
+   margin-top: 10%;
    /* margin-right: 40% !important; */
   
   }
@@ -540,7 +450,7 @@
     color: #212d50 !important;
     font-size: 30px !important;
     /* line-height: 45px; */
-    letter-spacing: 3px !;
+    letter-spacing: 3px !important;
     
 }
 .contact-page-text-email  {
@@ -567,7 +477,7 @@
 }
 .footer-text {
   font-family: 'Open Sans', sans-serif;
-  font-size: 10px !important;
+  font-size: 12px !important;
   color: #43454B !important;
   padding-top: 5% !important;
 }
