--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,10 @@
   margin: 0;
 }
 
+.mobile-nav{
+  display: none;
+}
+
                                                                      /* LANDING PAGE */
 
 #particles-js {
