--- a/styles/lg.css
+++ b/styles/lg.css
@@ -6,6 +6,23 @@
         padding: 0;
         margin: 0;
       }
+
+      a#backToTop {
+        width:40px;
+        height:40px;
+        opacity:0.5;
+        position:fixed;
+        bottom:10%;
+        left:95%;
+        display:none;
+        text-indent:-10000px;
+        outline:none !important;
+        /* background-image: url('arrow.png');
+        background-repeat: no-repeat; */
+        background-color: black;
+        z-index: 1000;
+    }
+
       .name-link-font{
         font-family: 'Montserrat', sans-serif !important;
         font-weight: 400 bold !important;
