--- a/styles/lg.css
+++ b/styles/lg.css
@@ -7,19 +7,20 @@
         margin: 0;
       }
 
-      a#backToTop {
-        width:40px;
-        height:40px;
-        opacity:0.5;
-        position:fixed;
-        bottom:10%;
-        left:95%;
-        display:none;
-        text-indent:-10000px;
-        outline:none !important;
-        /* background-image: url('arrow.png');
-        background-repeat: no-repeat; */
-        background-color: black;
+      a#scroll {
+        width: 55px;
+        height: 55px;
+        opacity: 0.8;
+        position: fixed;
+        bottom: 4%;
+        left: 94%;
+        display: none;
+        text-indent: -10000px;
+        outline: none !important;
+        background-image: url(../assets/mario.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        
         z-index: 1000;
     }
 
@@ -181,8 +182,7 @@
       .container{
         position: absolute;
         width: 100%;
-        /* margin-top: 25%;
-        margin-left: 25%; */
+        
       }
       
       div.intro{
@@ -201,27 +201,35 @@
     
       .portfolio{
         display: grid !important;
-        grid-template-columns: 1fr !important;
-        grid-auto-rows: 50% !important;
-        grid-gap: 1rem !important;
-        /* margin-top: 5%; */
-       width: 90% !important;
-        height: 100% !important;
-        margin-left: 5% !important;
-        margin-right: 5% !important;
+    grid-template-columns: repeat(11, 1fr) !important;
+    grid-auto-rows: 30% !important;
+    /* grid-template-rows: repeat(5, 1fr); */
+    grid-gap: 1rem !important;
+    margin-top: 5%;
+    width: 90% !important;
+    height: 100% !important;
+    margin-left: 5% !important;
+    margin-right: 5% !important;
         
+      }
+
+      .portfolio-container{
+        /* margin-top: 5%; */
+        height: 100%;
+        width: 100%;
+       
       }
     
       
       .portfolio-heading {
         display: flex !important;
-        margin-top: 20% !important;
-        flex-direction: column !important;
-        align-items: center !important;
-        grid-column: 1 !important;
-        width: 80%;
-        height: 50%;
-        grid-row: 1 !important;
+        margin-top: 5% !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    grid-column: 3 / 10 !important;
+    grid-row: 1/3;
+    width: 100%;
+    height: 100%;
     }
     .portfolio-heading-blurb{
           /* margin-left: 10% !important; */
@@ -242,39 +250,39 @@
     }
     
       .box-1 {
-        /* height: 100%; */
-        grid-column: 1 !important;
-        grid-row: 2 !important;
+        height: 100%;
+        grid-column: 2 / 5 !important;
+    grid-row: 2 / 4 !important;
       }
     
       
     
       .box-2{
-        grid-column: 1 !important;
-        grid-row: 3 !important;
+        grid-column: 5 / 8 !important;
+    grid-row: 2 !important;
       }
       .box-3{
-        grid-column: 1 !important;
-        grid-row: 4 !important;
+        grid-column: 5 / 8 !important;
+    grid-row: 3 !important;
       }
       .box-4{
-        grid-column: 1 !important;
-        grid-row: 5 !important;
+        grid-column: 8 / 11 !important;
+    grid-row: 2 !important;
       }
       .box-5{
-        grid-column: 1 !important;
-        grid-row: 6 !important;
+        grid-column: 8 / 11 !important;
+    grid-row: 3 !important;
       }
-      .box-6{
+      /* .box-6{
         grid-column: 1 !important;
         grid-row: 7 !important;
-      }
+      } */
       
     
       .paragraph-container{
         
         background: #F9F8F6;
-        margin-top: 180% !important;
+        margin-top: 10% !important;
         width: 100% !important;
         height: 100% !important;
         display: flex;  
@@ -286,25 +294,26 @@
       
       .paragraph{
         display: grid;
-        grid-template-columns: 1fr !important;
-        grid-auto-rows: 40% !important;
-        grid-gap: 0.1rem !important;
-        margin-top: 15% !important;
-        margin-left: 5% !important;
-        width: 80% !important;
-        height: 100% !important;
-        margin-bottom: 20% !important;
-        /* position: absolute; */
+        grid-template-columns: repeat(11, 1fr) !important;
+    grid-auto-rows: 30% !important;
+    grid-gap: 1rem !important;
+    margin-top: 0% !important;
+    margin-left: 5% !important;
+    margin-right: 5%;
+    width: 90% !important;
+    height: 100% !important;
+    /* margin-bottom: 20% !important; */
+    /* position: absolute; */
       
       }
       .about-blurb{
-        grid-column: 1 !important;
-        grid-row: 1 !important;
-        width: 80% !important;
-        /* margin-left: 5%; */
-        margin-top: 10%;
-        display: flex;
-        flex-direction: column;
+        grid-column: 2 / 7 !important;
+    grid-row: 2 / 3 !important;
+    width: 100% !important;
+    /* margin-left: 5%; */
+    /* margin-top: 10%; */
+    display: flex;
+    flex-direction: column;
         
       }
       .about-blurb-tittle {
@@ -327,23 +336,17 @@
       .about-picture {
         background-image: url(../assets/jhedi2_40\ 3.jpg);
         background-size: contain !important;
-        background-repeat: no-repeat !important;
-        height: 400px !important;
-        width: 400px !important;
-        margin-top: 10% !important;
-        grid-column: 1 !important;
-        grid-row: 2 !important;
-        display: block !important;
+    background-repeat: no-repeat !important;
+    height: 350px !important;
+    width: 400px !important;
+    /* margin-top: 10% !important; */
+    grid-column: 8 / 10 !important;
+    grid-row: 2 / 4 !important;
+    display: block !important;
     }
     
-    
-    
-    
-    
-      
-      
-      .second-about-blurb{
-        display: none !important;
+     .second-about-blurb{
+        /* display:  !important; */
         grid-column: 1 !important;
         grid-row: 3 !important;
         margin-top: 10%;
@@ -351,74 +354,61 @@
       }
       
       .second-about-img{
-        display: none !important;
+        /* display:  !important; */
         background-image: url("../assets/IMG_2635.jpg");
         background-size: cover;
         grid-column: 1 !important;
         grid-row: 3 !important;
         margin-top: 30%;
       }
-      /* .third-about-img{
-        grid-column: 2 / 3;
-        grid-row: 2/3;
       
-      } */
-                                                                                      
-      
-      /* .about-picture{
-        background-image: url("../assets/jhedi2_40\ 3.jpg");
-        background-size: cover;
-        height: 100%;
-        width: 100%;
-        margin-right: 10%;
-        grid-column: 6 / 8;
-        grid-row: 1/2;
-      } */
     
         .contact-font-last{
       
-        width: 100% !important;
-        height: 100% !important;
-        margin-top: 10%;
+            width: 100% !important;
+            height: 100% !important;
+            margin-top: 0%;
         
       } 
        
       .contact-container{
         display: grid !important;
-        grid-template-columns: 1fr !important;
-        grid-auto-rows: 40% !important;
-        grid-gap: 0.1rem !important;
-        /* margin-top: 380% !important; */
-        width: 93% !important;
-        height: 100% !important;
-        margin-left: 5% !important;
-        margin-right: 5% !important;
+    grid-template-columns: repeat(11, 1fr) !important;
+    grid-auto-rows: 30% !important;
+    grid-gap: 1rem !important;
+    /* margin-top: 380% !important; */
+    width: 90% !important;
+    height: 100% !important;
+    margin-left: 5% !important;
+    margin-right: 5% !important;
       }
       
       
       
       div#map{
-       height: 400px !important;
-       width: 100% !important;
-       margin-left: 0 !important;
-       /* margin-right: 40% !important; */
+        height: 400px !important;
+        width: 100% !important;
+        /* margin-left: 0 !important; */
+        grid-column: 2 / 11 !important;
+        grid-row: 1 / 3 !important;
+        /* margin-right: 40% !important; */
       
       }
       
       
       .contact-page{ 
-        grid-column: 1 !important;
-        grid-row: 2 !important;
-        margin-top: 10% !important;
+        grid-column: 2 / 5 !important;
+    grid-row: 3 !important;
+    margin-top: 10% !important;
       }
       
-      #map{
-        grid-column: 1 !important;
-        grid-row: 1 !important;
+      /* #map{ */
+        /* grid-column: 1 !important; */
+        /* grid-row: 1 !important; */
         /* height: 150px !important; */
        
         /* margin-right: 30% !important; */
-      }
+      /* } */
       
       .contact-form{
         grid-column: 3 / 6;
@@ -452,7 +442,7 @@
         align-items: center !important;
         bottom: 0 !important;
         border-top: 1px solid lightgray !important;
-        margin-top: 25% !important;
+        margin-top: 20% !important;
         height: 5% !important; 
         width: 100% !important;
     }
@@ -461,6 +451,7 @@
       font-size: 14px !important;
       color: #43454B !important;
       padding-top: 5% !important;
+      margin-bottom: 5% !important;
     }
   
 }
